--- a/django_project/blog/templates/blog/base.html
+++ b/django_project/blog/templates/blog/base.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'blog/main.css'%}">
-    
+    <link rel="stylesheet" href="{% static 'blog/contact.css'%}">
     {% if title %}
     <title>Django Blog - {{ title }}</title>
 {%else%}
@@ -28,7 +28,7 @@
             <div class="collapse navbar-collapse" id="navbarToggle">
               <div class="navbar-nav mr-auto">
                 <a class="nav-item nav-link" href="{% url 'blog-home' %}">Home</a>
-                <a class="nav-item nav-link" href="{% url 'blog-about' %}">About</a>
+                <a class="nav-item nav-link" href="{% url 'blog-contact_us' %}">Contact Us</a>
               </div>
               <!-- Navbar Right Side -->
               <div class="navbar-nav">
@@ -51,7 +51,7 @@
             {% endif %}
             {% block content %}{% endblock %}
           </div>
-          <div class="col-md-4">
+          <!-- <div class="col-md-4">
             <div class="content-section">
               <h3>Our Sidebar</h3>
               <p class='text-muted'>You can put any information here you'd like.
@@ -63,7 +63,7 @@
                 </ul>
               </p>
             </div>
-          </div>
+          </div> -->
         </div>
       </main>
       
