--- a/django_project/blog/templates/blog/base.html
+++ b/django_project/blog/templates/blog/base.html
@@ -28,7 +28,11 @@
             <div class="collapse navbar-collapse" id="navbarToggle">
               <div class="navbar-nav mr-auto">
                 <a class="nav-item nav-link" href="{% url 'blog-home' %}">Home</a>
+                {% if user.is_authenticated %}
                 <a class="nav-item nav-link" href="{% url 'blog-contact_us' %}">Contact Us</a>
+                {% else %}
+                <a class="nav-item nav-link" href="#">About Us</a>
+                {% endif %}
               </div>
               <!-- Navbar Right Side -->
               <div class="navbar-nav">
