--- a/django_project/blog/templates/blog/base.html
+++ b/django_project/blog/templates/blog/base.html
@@ -30,9 +30,9 @@
                 <a class="nav-item nav-link" href="{% url 'blog-home' %}">Home</a>
                 {% if user.is_authenticated %}
                 <a class="nav-item nav-link" href="{% url 'blog-contact_us' %}">Contact Us</a>
-                {% else %}
-                <a class="nav-item nav-link" href="#">About Us</a>
                 {% endif %}
+                <a class="nav-item nav-link" href="{% url 'blog-about' %}">About Us</a>
+                
               </div>
               <!-- Navbar Right Side -->
               <div class="navbar-nav">
