--- a/django_project/blog/templates/blog/home.html
+++ b/django_project/blog/templates/blog/home.html
@@ -10,7 +10,11 @@
             <small class="text-muted">{{ post.date_posted|date:"F d, Y"}}</small>
           </div>
           <h2><a class="article-title" href="{%url 'post-detail' post.id %}">{{ post.title }}</a></h2>
-          <p class="article-content">{{ post.content }}</p>
+          <div class = "post_body">
+            {{ post.content|safe|truncatewords:"50"|linebreaks }}
+            <a href="{%url 'post-detail' post.id %}">View Event</a>
+         </div>
+          <!-- <p class="article-content">{{ post.content }}</p> -->
         </div>
       </article>
       {% endfor %}
